# IFB

./: .gitignore  ANALISIS_Y_SOLUCION.md  API_ISSUE_ANALYSIS.md  CHANGELOG.md  COMANDOS_MANUALES.txt  COMANDOS_PARA_EJECUTAR.txt  COMANDOS_SINCRONIZAR.txt  COMANDO_COMPILAR.txt  COMMIT_MESSAGE.md  COMO_USAR_CODEX.md  COMPILAR_Y_PROBAR.sh  COMPILE_AND_TEST.md  COMPILE_INSTRUCTIONS.md  CORRECCIONES_CRITICAS.md  CORRECCIONES_FINALES.md  CORRECCION_FINAL.md  CORRECCION_FINAL_PR.md  CORRECCION_MUTATOR.md  CORRECCION_OBJECTIVE.md  CORRECCION_SERDEANY.md  Cargo.toml  EJECUTAR_AQUI.txt  EJECUTAR_ESTOS_COMANDOS.sh  EJECUTAR_FUZZER.md  EVOLUTIONARY_LLM_GUIDE.md  EXPERIMENT_LOG.md  FUZZER_READY.md  FUZZING_SIN_LLM.md  IDEA_ORIGINAL_VS_ACTUAL.md  IMPLEMENTATION_COMPLETE.md  INSTRUCCIONES_COMPILAR.txt  INTENTO_3.md  INTENTO_4.md  INTENTO_5.md  INTENTO_CON_OBJECTIVE.md  INTENTO_FINAL.md  ISSUES.md  ISSUES_SUMMARY.md  LLM_FUZZING_REPORT.md  POR_FAVOR_COMPARTE.md  (+29 more)
docker/: Dockerfile
docs/: ARCHITECTURE.md  BUILD.md  TROUBLESHOOTING.md
fuzzer_core/: Cargo.toml  build.rs  build.sh  check_fuzzer.sh  headers.h  kill_and_restart.sh  monitor_fuzzer.sh  restart_and_monitor.sh  run_foreground.sh  run_fuzzer.sh  run_with_crash_detection.sh  start_fuzzer.sh  status.sh
fuzzer_core/crashes/: last_input
fuzzer_core/src/: lib.rs  llm.rs  wrapper.h
fuzzer_core/src/bindings/: mod.rs
fuzzer_core/src/harness/: mod.rs
fuzzer_core/src/mutators/: curl_knowledge.rs  mod.rs  neuro_mutator.rs  neuro_mutator.rs.backup  structure_aware_mutator.rs  url_parser.rs
scripts/: build_release.sh  setup.sh  (+4 more)
(+36 files in other folders)
