[package]
name = "ifb_fuzzer_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
llm = ["ini", "toml", "reqwest", "serde", "serde_json"]

[dependencies]
libafl = { version = "0.11", default-features = false, features = ["std"] }
libc = "0.2"
ini = { version = "1.3", optional = true }
toml = { version = "0.8", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
bindgen = "0.69"
